# tmd-recognition

./: README.md  pyproject.toml
experiments/images_results/: aggregation_5fold_0_32.pkl  aggregation_5fold_64_68.pkl  dummy_aggregation_5fold.pkl
experiments/video_results/: ex1_res.csv  ex2_res.csv  ex3_res.csv
src/common/PIPNet_lib/: __init__.py  data_utils.py  detector.py  functions.py  preprocess.py
src/common/PIPNet_lib/experiments/WFLW/: pip_32_16_60_r101_l2_l1_10_1_nb10.py
src/images/: aggregation.ipynb  analysis.ipynb  analysis.py  data_modules.py  datasets.py  detector.py  experiments.ipynb  experiments_v2.ipynb  features.py  method_experiments.py  preprocess.py  test_feature_selection.py  training.py  types.py  utils.py
src/images/experiments/: FITYMI.py  MENPO.py  TNF.py  WFLW.py
src/surveys/: Create csv.ipynb  Tree.ipynb  rm_bad_patiences.ipynb
src/videos/: experimental.py  experiments.ipynb  utils.py
